@@ -1,7 +1,7 @@
 package com.peaceful.jdk.demo;
 
-import com.peaceful.common.util.Util;
-import sun.reflect.Reflection;
+import com.peaceful.Util;
+//import jdk.internal.reflect.Reflection;
 
 import java.lang.ClassLoader;
 
@@ -9,45 +9,45 @@ import java.lang.ClassLoader;
  * Created by wangjun on 15/2/21.
  */
 public class ClassLoaderDemo {
-
+/*
     public static void main(String[] args) throws ClassNotFoundException, IllegalAccessException, InstantiationException {
         Util.report(Reflection.getCallerClass());
-        /** 载入ClassLoaderTest的classloader **/
+        *//** 载入ClassLoaderTest的classloader **//*
         Util.report("载入ClassLoaderTest的classloader->" + ClassLoaderDemo.class.getClassLoader());
-        /** appache 提供的classloader */
-        com.sun.org.apache.bcel.internal.util.ClassLoader classLoader = new com.sun.org.apache.bcel.internal.util.ClassLoader(java.lang.ClassLoader.getSystemClassLoader());
+        *//** appache 提供的classloader *//*
+        ClassLoader classLoader = new com.sun.org.apache.bcel.internal.util.ClassLoader(java.lang.ClassLoader.getSystemClassLoader());
         Util.report("appache 提供的classloader->" + classLoader);
         Class ClassLoaderTestClass = Class.forName("com.peaceful.jdk.demo.ClassLoaderTest", false, classLoader);
         Util.report("classloader ? ->" + ClassLoaderTestClass.getClassLoader());
         Util.report("apache class loader parent ->" + ClassLoaderTestClass.getClassLoader().getParent());
-        /** java.lang.ClassCastException: com.peaceful.jdk.demo.ClassLoaderTest cannot be cast to com.peaceful.jdk.demo.ClassLoaderTest **/
+        *//** java.lang.ClassCastException: com.peaceful.jdk.demo.ClassLoaderTest cannot be cast to com.peaceful.jdk.demo.ClassLoaderTest **//*
 //        ClassLoaderTest ClassLoaderTest = (ClassLoaderTest) ClassLoaderTestClass.newInstance();
-        /** 不同的classload 载入同一个类不能进行比较和转换 */
+        *//** 不同的classload 载入同一个类不能进行比较和转换 *//*
         Util.report("? ->" + ClassLoaderTestClass.isInstance(ClassLoaderDemo.class));
-        /** 通过指定classloader 载入指定类 **/
+        *//** 通过指定classloader 载入指定类 **//*
         classLoader.loadClass("com.peaceful.jdk.demo.ClassLoaderTest");
-        /** 系统启动时设定的classloader **/
+        *//** 系统启动时设定的classloader **//*
         Util.report(ClassLoader.getSystemClassLoader());
 
         int[] arr = {1, 2, 3, 4, 5};
         ClassLoaderDemo[] arrClassLoaderTest = {};
-        /**<p> <tt>Class</tt> objects for array classes are not created by class
+        *//**<p> <tt>Class</tt> objects for array classes are not created by class
          * loaders, but are created automatically as required by the Java runtime.
          * The class loader for an array class, as returned by {@link
          * Class#getClassLoader()} is the same as the class loader for its element
          * type; if the element type is a primitive type, then the array class has no
          * class loader.
-         * */
+         * *//*
         Util.report(arr.getClass().getClassLoader());
         Util.report(arrClassLoaderTest.getClass().getClassLoader());
-        /** 父classloader **/
+        *//** 父classloader **//*
         Util.report(ClassLoaderDemo.class.getClassLoader().getParent());
-        /** 父classloader的classloader **/
+        *//** 父classloader的classloader **//*
         Util.report(ClassLoaderDemo.class.getClassLoader().getParent().getParent());
         Util.report(T2.class.getClassLoader());
         Util.report(System.currentTimeMillis());
         Util.report(System.nanoTime());
-    }
+    }*/
 
     /**
      * 输出结果
