@@ -1,7 +1,7 @@
 package com.peaceful.jdk.demo;
 
-import com.peaceful.common.util.Util;
-import sun.reflect.Reflection;
+import com.peaceful.Util;
+//import jdk.internal.reflect.Reflection;
 
 /**
  * Created by wangjun on 16/2/28.
@@ -9,7 +9,7 @@ import sun.reflect.Reflection;
 public class ReflectionDemo2 {
 
     public static void main(String[] args) {
-        Util.report(Reflection.getCallerClass());
+//        Util.report(Reflection.getCallerClass());
         Util.report(Thread.currentThread().getContextClassLoader());
     }
 }
